--- a/Reston.EProc.Runner.IIS/View/pengadaan-detail-terbuka.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-detail-terbuka.html
@@ -367,6 +367,7 @@
                                                 <div class="box-body">
                                                     <div class="box-group" id="accordion">
                                                         <!-- we are adding the .panel class so bootstrap.js collapse plugin detects it -->
+                                                        <!-- annwjizing-->
                                                         <div class="panel box box-primary">
                                                             <div class="box-header with-border">
                                                                 <h4 class="box-title text-blue-mtf">
@@ -391,6 +392,15 @@
                                                                                 <button class="btn btn-success pull-left action-pelaksanaan kirim-undangan"><i class="fa fa-fw fa-envelope-o"></i>Kirim Undangan</button>
                                                                             </div>
                                                                         </div>
+                                                                    </div>
+                                                                    <div class="row">
+                                                                        <div class="col-md-8">
+                                                                            <div class="form-group">
+                                                                                <label class="title">Persetujuan Tahapan Aanwjizing:</label>                                                                               
+                                                                            </div>
+                                                                        </div>
+                                                                    </div>
+                                                                    <div class="row bingkai-AANWIJZING" >
                                                                     </div>
 
                                                                     <div class="row">
@@ -472,6 +482,7 @@
                                                                 </div>
                                                             </div>
                                                         </div>
+                                                         <!-- submit penawaran-->
                                                         <div class="panel box box-primary">
                                                             <div class="box-header with-border">
                                                                 <h4 class="box-title text-blue-mtf">
@@ -521,6 +532,7 @@
                                                                 </div>
                                                             </div>
                                                         </div>
+                                                       
                                                         <div class="panel box box-primary">
                                                             <div class="box-header with-border">
                                                                 <h4 class="box-title text-blue-mtf">
@@ -859,36 +871,6 @@
                                                                             </div>
                                                                         </div>
                                                                     </div>
-                                                                    <!-- <div class="row">
-                                                                          <div class="col-md-10">
-                                                                             <div class="row">
-                                                                                    <div class="col-md-4">
-                                                                                         <div class="form-group">
-                                                                                             <label class="title">Tanggal Berita Acara</label>
-                                                                                             <input id="Text2" type="text"  class="form-control dateJadwalNoTime" >
-                                                                                         </div>
-                                                                                         <div class="form-group">
-                                                                                             <button class="btn btn-success pull-left save-tgl-ba" attr1="">Simpan</button>
-                                                                                         </div>
-                                                                                     </div>
-                                                                                 </div>
-                                                                             <div class="row">
-                                                                                   <div class="col-md-12">
-                                                                                         <div class="form-group ">
-                                                                                             <label class="title">Upload Lembar Disposisi</label>
-                                                                                             <div id="LembarDisposisi" attr="LembarDisposisi" action="/api/PengadaanE/UploadFile?tipe=LembarDisposisi" class="dropzone"></div>
-                                                                                         </div>
-                                                                                     </div>
-                                                                             </div>
-                                                                         </div>
-                                                                         <div class="col-md-2">
-                                                                             <div class="form-group">
-                                                                                 <label class="title">Unduh Lembar Disposisi
-                                                                                     <a class="download-berkas" attr1="lembar-disposisi"><i class="fa fa-fw  fa-download"></i></a>
-                                                                                 </label>
-                                                                             </div>
-                                                                         </div>
-                                                                     </div>-->
                                                                     <div class="row">
                                                                         <div class="col-md-10">
                                                                             <div class="row">
@@ -923,53 +905,6 @@
                                                                 </div>
                                                             </div>
                                                         </div>
-                                                        <!-- <div class="panel box box-primary">
-                                                              <div class="box-header with-border">
-                                                                <h4 class="box-title text-blue-mtf">
-                                                                  <a data-toggle="collapse" data-parent="#accordion" href="#collapse7">
-                                                                        Personil
-                                                                  </a>
-                                                                </h4>
-                                                              </div>
-                                                              <div id="collapse7" class="panel-collapse collapse">
-                                                                <div class="box-body">
-                                                                    <div class="row">
-                                                            <div class="col-md-12">
-
-                                                                <!--<label > PIC</label>
-                                                                <a id="addPerson-pic" attr1=".listperson-pic" style="margin-top:10px;margin-bottom:10px" class="addPerson btn btn-sm btn-social btn-bitbucket">
-                                                                     <i class="fa fa-plus"></i>
-                                                                    Rubah PIC
-                                                                    </a>
-                                                                <div class="listperson-pic">
-                                                                </div>
-                                                            </div>
-                                                          <div class="col-md-12">
-                                                                <label >Tim</label>
-                                                                <div class="listperson-tim">
-                                                                </div>
-                                                            </div>
-                                                            <div class="col-md-12">
-                                                                <label >User</label>
-                                                                <div class="listperson-staff">
-
-                                                                </div>
-                                                            </div>
-                                                             <div class="col-md-12">
-                                                                <label >Controller</label>
-                                                                <div class="listperson-controller">
-
-                                                                </div>
-                                                            </div>
-                                                            <div class="col-md-12">
-                                                                <label >Compliance</label>
-                                                                <div class="listperson-compliance">
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                                </div>
-                                                              </div>
-                                                            </div>-->
                                                     </div>
                                                 </div><!-- /.box-body -->
                                             </div>
@@ -1038,13 +973,6 @@
                                                                 <div id="BerkasBeritaAcaraPenentuanPemenang" action="/api/PengadaanE/UploadFile?tipe=PenentuanPemenang" class="dropzone"></div>
                                                             </div>
                                                         </div>
-                                                        <!--<div class="col-md-6">
-                                                            <div class="form-group ">
-                                                                <label class="title">Berkas Lembar Disposisi</label>
-                                                                <div id="BerkasLembarDisposisi" attr="LembarDisposisi" action="/api/PengadaanE/UploadFile?tipe=LembarDisposisi" class="dropzone"></div>
-                                                            </div>
-                                                        </div>-->
-
                                                         <div class="col-md-6">
                                                             <div class="form-group ">
                                                                 <label class="title">Upload Surat Perintah Kerja (SPK)</label>
