--- a/Reston.EProc.Runner.IIS/View/create-pks.html
+++ b/Reston.EProc.Runner.IIS/View/create-pks.html
@@ -297,8 +297,8 @@
                     <h4 class="modal-title">Konfirmasi</h4>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" id="downloadFile" class="btn btn-default">Download</button>
-                    <button type="button" id="HapusFile" class="btn btn-default">Hapus</button>
+                    <button type="button" id="downloadFile" class="btn btn-default" >Download</button>
+                    <button type="button" id="HapusFile" class="btn btn-default" style="display:none">Hapus</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 </div>
             </div><!-- /.modal-content -->
