--- a/Reston.EProc.Runner.IIS/View/create-po.html
+++ b/Reston.EProc.Runner.IIS/View/create-po.html
@@ -80,8 +80,7 @@
                     </div>
                     <div class="navbar-custom-menu">
                         <ul id="menu-top" class="nav navbar-nav">
-                            <li><a  title="Simpan" href="#" class="Simpan"><i class="fa fa-fw fa-save " style="font-size:20px;"></i>Simpan</a></li>
-                            <li><a  title="Ajukan" href="#" class="ajukan" style="display:none">Ajukan</a></li>
+                            <li><a  title="Simpan" href="#" class="Simpan"><i class="fa fa-fw fa-save " style="font-size:20px;"></i>Simpan</a></li>                           
                             <li><a  id="Hapus" title="Hapus" href="#" class="Hapus" style="display:none"><i class="fa fa-fw fa-trash " style="font-size:20px;"></i>Hapus</a></li>
                         </ul>
                     </div>
@@ -125,10 +124,7 @@
                 <div class="row">
                     <div class="col-md-10">
                         <div class="box box-primary box-white">
-                                <input type="hidden" id="isPIC" />
-                                <input type="hidden" id="pengadaanId" />
-                                <input type="hidden" id="VendorId" />
-                                <input type="hidden" id="pksId" />
+                                <input type="hidden" id="Id" />
                                 <div class="box-body">
                                     <div class="row">
                                         <div class="col-md-10">
@@ -145,60 +141,72 @@
                                     </div>
                                     <div class="row">
                                         <div class="form-group col-md-12">
-                                            <label class="title">Judul:</label>
-                                            <input type="text" class="form-control" id="judul">
+                                            <label class="title">Prihal:</label>
+                                            <input type="text" class="form-control" id="prihal">
                                         </div>
                                     </div>
                                     <div class="row">
                                         <div class="form-group col-md-4">
-                                            <label class="title">Vendor</label>
-                                            <select class="form-control">
-                                                <option></option>
-                                            </select>
+                                            <label class="title">Vendor:</label>
+                                            <input type="text" class="form-control" id="vendor">
                                         </div>
                                     </div>
                                     <div class="row">
                                         <div class="form-group col-md-4">
                                             <label class="title">No. PO:</label>
-                                            <input type="text" class="form-control" id="no-po">
+                                            <input type="text" id="no-po" class="form-control" disabled> 
+                                            <span class="input-group-btn">
+                                               <button  class="btn btn-primary ge-no-po" type="button">Genarate No PO</button>  
+                                            </span>  
                                         </div>
                                     </div>
                                     <div class="row">
                                         <div class="form-group col-md-4">
                                             <label class="title">Tanggal PO:</label>
-                                            <input id="tanggal-pekerjaan-mulai" type="text" class="tanggal-tahapan form-control input-group dateJadwal">
+                                            <input id="tanggal-po" type="text" class="tanggal-tahapan form-control input-group date">
                                         </div>
                                     </div>
                                     <div class="row">
                                         <div class="form-group col-md-4">
                                             <label class="title">Nilai PO:</label>
-                                            <input class="form-control" type="text" id="no-spk-renewal"><br />
-                                            <!--<button id="id" class="btn btn-success " type="button">
-                                                <a href="#" style="color:white;">AKTIFKAN</a>
-                                            </button>
-                                            <button id="id" class="btn btn-danger " type="button">
-                                                <a href="#" style="color:white;">BATAL</a>
-                                            </button>-->
+                                            <input class="form-control" type="text" disabled>
                                         </div>
-                                        <!--<div class="form-group col-md-4">
-                                            <label class="title">Status:</label>
-                                            <div class="radio">
-                                                <label>
-                                                    <input type="radio" name="status" />Draf
-                                                </label>
-                                                <label>
-                                                    <input type="radio" name="status" />Aktif
-                                                </label>
-                                                <label>
-                                                    <input type="radio" name="status" />Batal
-                                                </label>
+                                    </div>
+                                     <div class="row">
+                                        <div class="col-md-10">
+                                            <div class=" panel-header-white">
+                                                <span class="title-header" id="Span1">PO Item</span>
                                             </div>
-                                        </div>-->
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="col-md-4">                                            
+                                                <button  class="btn btn-primary add-item" type="button">Tambah Barang</button>  
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-12">
+                                            <table class="table table-bordered table-striped table-responsive" id="table-podetail" style="margin-top:20px; ">
+                                                <thead>
+                                                    <tr>
+                                                        <th>Kode</th>
+                                                        <th>Nama Barang</th>
+                                                        <th>Banyak</th>
+                                                        <th>Satuan</th>
+                                                        <th>Harga</th>
+                                                        <th>Jumlah</th>
+                                                        <th></th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                </tbody>
+                                            </table>
+                                        </div>
                                     </div>
                                     <div class="row">
                                         <div class="col-md-10">
                                             <div class=" panel-header-white">
-                                                <span class="title-header" id="section-3">PO:</span>
+                                                <span class="title-header" id="section-3">PO Dokumen</span>
                                             </div>
                                         </div>
                                     </div>
@@ -208,7 +216,7 @@
                                                 <div class="col-md-12">
                                                     <div class="form-group">
                                                         <label class="title">Unggah PO</label>
-                                                        <div id="dok-pks" attr="PKS" action="/api/PengadaanE/UploadFile?tipe=PKS" class="dropzone"></div>
+                                                        <div id="DOKPO" attr="PKS" action="/api/PO/UploadFile" class="dropzone"></div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -221,21 +229,7 @@
             </section><!-- /.content -->
         </div>
         <aside class="control-sidebar control-sidebar-light control-sidebar-open">
-            <!-- Create the tabs -->
-            <!--<ul class="nav nav-tabs nav-stacked" id="side-kanan" >
-                <li class="active"><a href="#section-1">Atas</a></li>
-                <li><a href="#section-2">Anggaran</a></li>
-                <li><a href="#section-3">Korespondensi Internal</a></li>
-                <li><a href="#section-4">Spesifikasi</a></li>
-                <li><a href="#section-5">Kandidat</a></li>
-                <li><a href="#section-6">Jadwal</a></li>
-                <li><a href="#section-7">Personil</a></li>
-            </ul>-->
-            <!-- Tab panes -->
-
-        </aside><!-- /.control-sidebar -->
-        <!-- Add the sidebar's background. This div must be placed
-             immediately after the control sidebar -->
+        </aside>
         <div class="control-sidebar-bg"></div>
     </div><!-- ./wrapper -->
      <div class="modal" id="konfirmasiFile" role="dialog" FileId="" attr1="" aria-hidden="true">
@@ -252,6 +246,96 @@
                 </div>
             </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+
+      <div class="modal" id="item-modal" role="dialog" aria-hidden="true">
+      <div class="modal-dialog">
+	    <div class="modal-content">
+	      <div class="modal-header">
+		    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+		    <h4 class="modal-title">Form Tambah Barang</h4>
+              <div class="modal-body"> 
+                  <div class="row">
+                        <div class="col-md-12">
+                            <form role="form" class="jp-form">
+                                <input type="hidden" id="itemId" />
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="form-group">
+                                            <label class="col-sm-4 control-label">Kode</label>
+                                            <div class="col-sm-6">
+                                                <input id="kode" type="text" class="form-control " placeholder="Kode">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <br />
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="form-group">
+                                            <label class="col-sm-4 control-label">Nama Barang</label>
+                                            <div class="col-sm-6">
+                                                 <input id="nama-barang" type="text" class="form-control " placeholder="NamaBarang">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <br />
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="form-group">
+                                            <label class="col-sm-4 control-label">Banyak</label>
+                                            <div class="col-sm-6">
+                                                 <input id="banyak" type="text" class="form-control " placeholder="Banyak">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <br />
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="form-group">
+                                            <label class="col-sm-4 control-label">Satuan</label>
+                                            <div class="col-sm-6">
+                                                 <input id="satuan" type="text" class="form-control " placeholder="Satuan">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <br />
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="form-group">
+                                            <label class="col-sm-4 control-label">Harga</label>
+                                            <div class="col-sm-6">
+                                                 <input id="harga" type="text" class="form-control " placeholder="Harga">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <br />
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="form-group">
+                                            <label class="col-sm-4 control-label">Jumlah</label>
+                                            <div class="col-sm-6">
+                                                 <input id="jumlah" disabled type="text" class="form-control " placeholder="Jumlah">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <br />
+                            </form>
+                        </div>
+                    </div>
+               </div>
+	      </div>
+	      <div class="modal-footer">
+             <button type="button" class="btn btn-default save-item" data-toggle="tooltip" title="Save" >Save</button>	
+              <button type="button" class="btn btn-default close-item-form" data-dismiss="modal" data-toggle="tooltip" title="Keluar">Close</button>
+	      </div>
+	    </div><!-- /.modal-content -->
+      </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
     <!--endviewr-->
     <!-- jQuery 2.1.4 -->
@@ -276,10 +360,6 @@
     <script src='plugins/fullcalendar/moment.min.js'></script>
     <script src='plugins/fullcalendar/fullcalendar.min.js'></script>
     <script src='plugins/fullcalendar/lang/id.js'></script>
-    <script src="plugins/typeaheadjs/typeahead.bundle.min.js"></script>
-    <script src="plugins/typeaheadjs/handlebars.js"></script>
-    <script src="plugins/typeaheadjs/bootstrap-tagsinput.js"></script>
-    <script src="plugins/typeaheadjs/app_bs3.js"></script>
     <script src="datetimepicker/bootstrap-datetimepicker.js"></script>
     <script src="datetimepicker/locales/bootstrap-datetimepicker.id.js"></script>
     <script src="plugins/jQueryNumber/jquery.number.js"></script>
@@ -290,7 +370,7 @@
     <script src="blockui/jquery.blockUI.js"></script>
     <script src="dist/js/menu.js"></script>
     <script src="dropzone.js"></script>
-    <script src="dist/js/create-pks.js"></script>
+    <script src="dist/js/create-po.js"></script>
     <script>
         
     </script>
