--- a/Reston.EProc.Runner.IIS/View/rekanan-side-detail-pengadaan.html
+++ b/Reston.EProc.Runner.IIS/View/rekanan-side-detail-pengadaan.html
@@ -221,7 +221,6 @@
 											        <div id="perlaksanaan" class="tab-pane">                                                           
                                                         <div class="box-body">
                                                               <div class="box-group" id="accordion">
-                                                                <!-- we are adding the .panel class so bootstrap.js collapse plugin detects it -->
                                                                 <div class="panel box box-primary">
                                                                   <div class="box-header with-border">
                                                                     <h4 class="box-title">
@@ -267,7 +266,7 @@
                                                                         </div>
                                                                   </div>
                                                                 </div>
-                                                                  <div class="panel box box-primary">
+                                                                 <div class="panel box box-primary">
                                                                   <div class="box-header with-border">
                                                                     <h4 class="box-title">
                                                                       <a  id="tab-klarifikasi-rekanan"  data-parent="#accordion" href="#collapseTwo">
@@ -299,6 +298,45 @@
                                                                                     <div class="form-group ">
 											                                            <label class="title">Dokumen Lain</label>			
                                                                                         <div id="BerkasRekananKlarifikasi" attr="BerkasRekananKlarifikasi" action="/api/VendorAction/UploadFile?tipe=BerkasRekananKlarifikasi" class="dropzone"></div>							
+											                                            <!--<div action="/upload-target" class="dropzone"></div>-->															
+										                                            </div>
+                                                                               </div>
+                                                                           </div>
+                                                                        </div>
+                                                                  </div>
+                                                                </div>
+                                                                   <div class="panel box box-primary" >
+                                                                  <div class="box-header with-border">
+                                                                    <h4 class="box-title">
+                                                                      <a  id="tab-klarifikasi-lanjutan-rekanan"  data-parent="#accordion" href="#panel-klarifikasi-lanjutan">
+                                                                        Klarifikasi & Negoisasi Lanjutan
+                                                                      </a>
+                                                                         <label id="Label1" style="font-size:0.8em"></label>
+                                                                    </h4>
+                                                                  </div>
+                                                                  <div id="panel-klarifikasi-lanjutan"  class="panel-collapse collapse ">
+                                                                        <div class="box-body">
+                                                                            <div class="row">
+                                                                                <div class="col-md-2">
+                                                                                    <div class="form-group">
+                                                                                        <a id="penawaran-klarifikasi-lanjutan" href="#" class="btn btn-success pull-left" style="color:white">Buat Penawaran Klarifikasi Lanjutan</a>
+                                                                                    </div>
+                                                                                    
+                                                                                </div>
+                                                                            </div>
+                                                                            <div class="row">
+                                                                                <div class="col-md-3">
+                                                                                    <div class="form-group">
+                                                                                        <label class="title">Total Penawaran Klarifikasi</label>
+                                                                                        <input id="total-penawaran-klarifikasi-lanjutan" type="text" class="form-control " disabled />
+                                                                                    </div>
+                                                                                </div>
+                                                                            </div>
+                                                                            <div class="row">
+                                                                              <div class="col-md-12">
+                                                                                    <div class="form-group ">
+											                                            <label class="title">Dokumen Lain</label>			
+                                                                                        <div id="BerkasRekananKlarifikasiLanjutan" attr="BerkasRekananKlarifikasiLanjutan" action="/api/VendorAction/UploadFile?tipe=BerkasRekananKlarifikasiLanjutan" class="dropzone"></div>							
 											                                            <!--<div action="/upload-target" class="dropzone"></div>-->															
 										                                            </div>
                                                                                </div>
