persetujuan di setiap tahapan di pengadaan terbuka, diilangin redy di depan pas ngajuain

--- a/Reston.EProc.Runner.IIS/View/pengadaan-add.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-add.html
@@ -183,7 +183,7 @@
                                         </div>
                                     </div>
                                     <div class="row">
-                                        <div class="form-group col-md-6">
+                                        <div class="form-group col-md-6" style="display:none">
                                             <label class="title">No COA</label>
                                             <input type="text" class="form-control" id="noCoa">
                                         </div>
