--- a/Reston.EProc.Runner.IIS/View/pengadaan-detail.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-detail.html
@@ -1454,6 +1454,8 @@
     <script src="datetimepicker/locales/bootstrap-datetimepicker.id.js"></script>
     <script src="dist/js/app.min.js"></script>
     <!--<script src="chatjs/chat.js"></script>-->
+    <script src="site.js"></script>
+    <script src="dist/site.js"></script>
     <script src="plugins/angular/angular.min.js"></script>
     <script src="dropzone.js"></script>
     <script src="dist/js/pengadaan-detail.js"></script>
@@ -1463,6 +1465,9 @@
     <script src="dist/js/rubah-personil.js"></script>
     <script src="dist/js/riwayat-pengadaan.js"></script>
     <script src="dist/js/pelaksanaan-penentuan-pemenang.js"></script>
-    <script></script>
+    
+    <script>
+        cekLogin(0)
+    </script>
 </body>
 </html>
