--- a/Reston.EProc.Runner.IIS/View/pengadaan-terbuka-detail.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-terbuka-detail.html
@@ -460,7 +460,7 @@
                                                                     <div class="row">
                                                                         <div class="col-md-2">
                                                                             <div class="form-group">
-                                                                                <button id="btn-next-jadwal-aawijzing" class="btn btn-success pull-left next-step action-pelaksanaan" elDari="#next-aanwijing-dari" elSampai="" disabled="disabled">Save&NextStep</button>
+                                                                                <button id="btn-next-jadwal-aawijzing" class="btn btn-success pull-left next-step action-pelaksanaan" attrStatus="DISETUJUI" elDari="#next-aanwijing-dari" elSampai="" disabled="disabled">Save&NextStep</button>
                                                                             </div>
                                                                         </div>
                                                                     </div>
