Commit update terakhir

--- a/Reston.EProc.Runner.IIS/View/approval-persetujuan-pemenang-belum-disetujui.html
+++ b/Reston.EProc.Runner.IIS/View/approval-persetujuan-pemenang-belum-disetujui.html
@@ -256,8 +256,8 @@
                     { "data": "Pemenang" },
                     { "data": "JenisPekerjaan", "className": "tengah" },
                     { "data": "StatusPersetujuanPemenangName" },
-                     { "data": "PrevApprover" },
-                    { "data": "NextApprover" },
+                     { "data": "PrevApproverPersetujuan" },
+                    { "data": "NextApproverPersetujuan" },
                     { "data": null },
                     { "data": null }
                 ],
@@ -301,7 +301,7 @@
                             //accounting.formatNumber(total, { thousand: ".", decimal: ",", precision: 2 })
                         },
 
-                        "targets": 8,
+                        "targets": 9,
                         "orderable": false
                     },
 
@@ -318,7 +318,7 @@
                             return html;
                         },
 
-                        "targets": 9,
+                        "targets": 10,
                         "orderable": false
                     }
                 ],
