--- a/Reston.EProc.Runner.IIS/View/pengadaan-detail.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-detail.html
@@ -596,7 +596,7 @@
                                                                      <div class="row">
                                                                         <div class="col-md-2">
                                                                             <div class="form-group">
-                                                                                <a class="btn btn-success lihat-penilaian"> Lihat Harga Penawaran Rekanan</a>
+                                                                                <a class="btn btn-success lihat-penilaian-buka-amplop"> Lihat Harga Penawaran Rekanan</a>
                                                                             </div>
                                                                         </div>
                                                                     </div>
@@ -799,7 +799,7 @@
                                                                         </div>
                                                                         <div class="col-md-4">
                                                                             <div class="form-group">
-                                                                                <button class="btn btn-success pull-left action-pelaksanaan kirim-undangan-klarifikasi"><i class="fa fa-fw fa-envelope-o"></i>Kirim Undangan Klarifikasi Lanjutan</button>
+                                                                                <button class="btn btn-success pull-left action-pelaksanaan kirim-undangan-klarifikasi-lanjutan"><i class="fa fa-fw fa-envelope-o"></i>Kirim Undangan Klarifikasi Lanjutan</button>
                                                                             </div>
                                                                         </div>
                                                                     </div>
@@ -835,7 +835,7 @@
                                                                                         <input id="input-ba-klarifikasi-lanjutan" type="text" class="form-control dateJadwalNoTime action-pelaksanaan">
                                                                                     </div>
                                                                                     <div class="form-group">
-                                                                                        <button class="btn btn-success pull-left save-tgl-ba action-pelaksanaan" attr1="input-ba-klarifikasi-lanjutan" attr2="BerkasKlarifikasiLanjutan">Simpan</button>
+                                                                                        <button class="btn btn-success pull-left save-tgl-ba action-pelaksanaan" attr1="input-ba-klarifikasi-lanjutan" attr2="BeritaAcaraKlarifikasiLanjutan">Simpan</button>
                                                                                     </div>
                                                                                 </div>
                                                                             </div>
@@ -971,7 +971,7 @@
                                                                     <div class="row">
                                                                         <div class="col-md-4">
                                                                             <div class="form-group">
-                                                                                <label class="title">Tanggal Klarifikasi & Negoisasi</label>
+                                                                                <label class="title">Tanggal Pemenang</label>
                                                                                 <input id="next-pemenang-dari" type="text" class="form-control dateJadwal">
                                                                             </div>
                                                                         </div>
